remove data container, render ord.csv in postgres container

--- a/greynir-docker-db/Dockerfile
+++ b/greynir-docker-db/Dockerfile
@@ -4,10 +4,25 @@ MAINTAINER Jón Levy <nonni@nonni.cc>
 # docker run --name greynir_db --volumes-from greynir_data -d busla/greynir_db
 # Set the locale
 
+RUN apt-get update && apt-get install -y git python3.4
 
 RUN localedef -i is_IS -c -f UTF-8 -A /usr/share/locale/locale.alias is_IS.UTF-8
 
 ENV LANG is_IS.utf8
 
-#ADD resources/ord.csv /srv/ord.csv
+# Clone the Greynir repo
+RUN mkdir -p /srv/greynir-data
+WORKDIR /srv/greynir-data
+
+RUN git clone https://github.com/busla/Reynir.git
+
+WORKDIR /srv/greynir-data/Reynir 
+
+ADD obeyg.smaord.txt resources/obeyg.smaord.txt
+ADD plastur.feb2013.txt resources/plastur.feb2013.txt
+ADD SHsnid.csv resources/SHsnid.csv
+
+WORKDIR /srv/greynir-data/Reynir/utils
+RUN python3.4 external_data_validator.py
+
 ADD sql/initial_setup.sql /docker-entrypoint-initdb.d/initial_setup.sql
