--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,21 @@
 version: '2'
-services:
-  web:
-    image: busla/greynir_web
-    container_name: greynir_web
-    ports: "5000:5000"
-    links: postgres
-    depends_on: postgres
-    command: /bin/bash -c "pypy3 scraper.py --init;  pypy3 main.py
-  
+services:  
+
   postgres:
+    build: ./greynir-docker-db
     image: busla/greynir_db
     container_name: greynir_db
-    ports: "5432:5432"
-    volumes_from: data
-    depends_on: data
-  
-  data:
-    image: busla/greynir_data
-    container_name: greynir_data
+    ports: 
+    - 0.0.0.0:5432:5432
+
+  web:
+    build: ./greynir-docker-web
+    container_name: greynir_web
+    image: busla/greynir_web
+    ports: 
+    - 0.0.0.0:5000:5000
+    links: 
+    - postgres
+    depends_on: 
+    - postgres
+    command: /bin/bash -c "pypy3 scraper.py --init;  pypy3 main.py"
