--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,11 +1,10 @@
 FROM postgres:latest
 MAINTAINER Jón Levy <nonni@nonni.cc>
-# create the image: docker build -t busla/greynir_db . 
-# docker run --name greynir_db -p 5432:5432 -d busla/greynir_db
-# Set the locale
 
+# Install git and python
 RUN apt-get update && apt-get install -y git python3.4
 
+# Set the locale
 RUN localedef -i is_IS -c -f UTF-8 -A /usr/share/locale/locale.alias is_IS.UTF-8
 
 ENV LANG is_IS.utf8
